<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    
    >
    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"

            />
        <item
            android:id="@+id/nav_invoice"
            android:title="@string/invoice_buyer" />
        <item
            android:id="@+id/nav_orders"
            android:title="@string/money_orders" />

        <!--item
            android:id="@+id/nav_score"
            android:title="@string/score_debit_credit" /-->
        <item
            android:id="@+id/naz_rest"
            android:title="@string/rest_money" />
        <item
            android:title="@string/info">
            <menu>
                <item
                    android:id="@+id/about_app"
                    android:title="@string/about_app"
                    />
                <item
                    android:id="@+id/contacts"
                    android:title="@string/contacts" />
            </menu>
        </item>
    </group>
</menu>
