<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsStr"
            android:textSize="24sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/serverName"
            style="@android:style/Widget.EditText"
            android:hint="@string/serverStr"
            android:textSize="18sp"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userLogin"
            style="@android:style/Widget.EditText"
            android:hint="@string/loginStr"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userPassword"
            style="@android:style/Widget.EditText"
            android:hint="@string/passwordStr"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            />

        <Button
            android:id="@+id/enterButton"
            android:onClick="enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterButton"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>