<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp">

    <TextView
        android:id="@+id/dateView"
        android:layout_marginVertical="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_08_04_2021"
        android:textColor="@color/myWhiteColor"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginVertical="4dp">

        <ImageView
            android:id="@+id/statusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/status"
            />
        <TextView
            android:id="@+id/buyerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textSize="16sp"
            android:textColor="@color/myWhiteColor"
            android:text="@string/buyer1"/>
        <TextView
            android:id="@+id/priceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="end"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/_16591_rub"
            android:textColor="@color/myYellowColor"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginVertical="4dp"
        android:background="@color/myLightColor"/>
</LinearLayout>
