<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.banzaraktsaeva.console.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:label="@string/home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_home_second_to_nav_gallery3"
            app:destination="@id/nav_invoice" />
        <action
            android:id="@+id/action_nav_home_second_to_nav_slideshow"
            app:destination="@id/nav_orders" />
    </fragment>

    <fragment
        android:id="@+id/nav_invoice"
        android:name="com.banzaraktsaeva.console.ui.gallery.GalleryFragment"
        android:label="@string/invoice_buyer"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_nav_gallery_to_nav_home_second2"
            app:destination="@id/nav_home_second" />
    </fragment>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.banzaraktsaeva.console.ui.slideshow.SlideshowFragment"
        android:label="@string/money_orders"
        tools:layout="@layout/fragment_slideshow">
        <action
            android:id="@+id/action_nav_slideshow_to_nav_home_second"
            app:destination="@id/nav_home_second" />
    </fragment>
</navigation>