<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBlackColor"
    android:paddingHorizontal="26dp"
    tools:context=".ui.home.HomeFragment">

    <TextClock
        android:id="@+id/textClockView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@color/myWhiteColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"

        android:layout_marginTop="64dp"
        android:format12Hour="dd MMMM yyyy, EEEE"
        android:format24Hour="dd MMMM yyyy, EEEE"/>

    <View
        android:layout_width="match_parent"
        android:layout_marginHorizontal="36dp"
        android:layout_height="0.2dp"
        android:layout_marginTop="4dp"
        android:background="@color/myLightColor"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todayStr"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:textColor="@color/myWhiteColor"
        android:textSize="14sp"/>

    <androidx.cardview.widget.CardView
        android:id="@id/card1"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="42dp"
        app:cardCornerRadius="4pt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/myDarkColor"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"

            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/header_rest_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/rest_money"
                android:textColor="@color/myWhiteColor"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="51 "
                    android:textColor="#a9a9a9"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="на расчетных счетах"
                    android:textColor="@color/myWhiteColor"
                    android:textSize="14sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/rest_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16591_rub"

                android:layout_marginTop="16dp"
                android:textColor="@color/myYellowColor"
                android:textSize="34sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="48dp"
        app:cardBackgroundColor="@color/myDarkColor"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"

            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/header_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/debt"
                android:textColor="@color/myWhiteColor"
                android:textSize="20sp" />

            <TableLayout
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                >

                <TableRow android:layout_marginVertical="16dp"
                    android:layout_width="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical"

                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="62 "
                            android:textColor="#a9a9a9"
                            android:textSize="14sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Дебиторская"
                            android:textColor="@color/myWhiteColor"
                            android:textSize="14sp" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/debetView"
                        android:layout_gravity="end"
                        android:text="@string/_54123_rub"
                        android:textColor="@color/myYellowColor"
                        android:textSize="24sp" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:background="@color/myLightColor" />

                <TableRow android:layout_marginTop="16dp"
                    android:layout_marginBottom="36dp"
                    android:layout_width="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="60 "
                            android:textColor="#a9a9a9"
                            android:textSize="14sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Кредиторская"
                            android:textColor="@color/myWhiteColor"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/creditView"
                        android:text="@string/_102_rub"
                        android:layout_gravity="center"
                        android:textColor="@color/myYellowColor"
                        android:textSize="24sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>